Bug 104744 - FILEOPEN: RTF Spacing Totally Lost on Import
Summary: FILEOPEN: RTF Spacing Totally Lost on Import
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.4.0 target:5.3.0.2
Keywords: bibisected, bisected, filter:rtf, regression
: 104811 (view as bug list)
Depends on:
Blocks: RTF
  Show dependency treegraph
 
Reported: 2016-12-17 22:13 UTC by Luke
Modified: 2019-12-27 15:33 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example bulleted list (43.92 KB, application/msword)
2016-12-17 22:13 UTC, Luke
Details
Same file saved as DOCX correctly handled (12.56 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2016-12-17 22:14 UTC, Luke
Details
sample (5.48 KB, text/rtf)
2016-12-23 12:25 UTC, Xisco Faulí
Details
sample2 (24.46 KB, application/rtf)
2016-12-26 17:56 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2016-12-17 22:13:20 UTC
Created attachment 129736 [details]
Example bulleted list

Steps to Reproduce:
1. In Word, create new doc
2. Create a bulleted list
3. Note the spacing
4. Save as RTF
5. Open in a Recent build of LO

Expected Results:

Indented like Word.

Actual Results:

No Indentation at all.


This is a recent regression. Fortunately the ephemeral tinderboxes hadn't vanished yet, so I was able to bibisect it to:

https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=ba6b35fc68a01aff72b39eb7809bacb326068668..d538d3d84172a74dfe97d59a6d3daf9a45459cab

Possible culprit?
https://cgit.freedesktop.org/libreoffice/core/commit/?id=657c6cc3acec0528209a8584b838cd6de581c437
Comment 1 Luke 2016-12-17 22:14:45 UTC
Created attachment 129737 [details]
Same file saved as DOCX correctly handled
Comment 2 Xisco Faulí 2016-12-17 22:46:22 UTC Comment hidden (obsolete)
Comment 3 Luke 2016-12-17 23:16:39 UTC
Xisco,
Sounds like you are confusing this bug with Bug 104745.
Comment 4 Xisco Faulí 2016-12-17 23:27:40 UTC
oh, you're right.

I can reproduce this behaviour in

Version: 5.4.0.0.alpha0+
Build ID: b29ae3dace6a6a2e24e531bb648cd3cb97ea3225
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-12-14_10:19:59
Locale: ca-ES (ca_ES.UTF-8); Calc: group

but not in

Version: 5.4.0.0.alpha0+
Build ID: 634589b340316ba64b731b4d923c1056be415494
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

so, as you said, this is a recent regression
Comment 5 Luke 2016-12-18 01:25:35 UTC
Miklos, 
Could you please take a look at this regression? I confirmed that reverting:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=657c6cc3acec0528209a8584b838cd6de581c437

tdf#104228 RTF import: fix override of style left/right para margin


Causes the bullet lists to once again be indented. The spacing values is still not quite right due to Bug 104745, but I believe that will turn out to be a separate issue.

-Luke
Comment 6 Xisco Faulí 2016-12-18 20:57:39 UTC
Adding Cc: to Miklos Vajna
Comment 7 Xisco Faulí 2016-12-20 15:22:49 UTC
*** Bug 104811 has been marked as a duplicate of this bug. ***
Comment 8 Luke 2016-12-21 05:49:37 UTC Comment hidden (obsolete)
Comment 9 Miklos Vajna 2016-12-21 23:17:16 UTC
Attachment 129806 [details] is an RTF file, just with a .doc extension, don't be confused. ;-)

I'll take care of the unexpected 0 margin.
Comment 10 Xisco Faulí 2016-12-23 12:25:07 UTC
Created attachment 129894 [details]
sample

another file affected
Comment 11 Xisco Faulí 2016-12-26 17:56:12 UTC
Created attachment 129950 [details]
sample2
Comment 12 Commit Notification 2017-01-03 10:57:49 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a9e029ace41562e28e9242d63230ad1ca275f5d3

tdf#104744 RTF import: fix unexpected zero para left margin wrt style dedup

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Luke 2017-01-04 03:01:23 UTC
Verified FIXED in Version: 5.4.0.0.alpha0+ (x64)
Build ID: bf80bbb7b75febc2769d6b64e6981224982f8fe2

Also tested all of the dupes and samples. RTF filter is looking good. Thank you Miklos!
Comment 14 Commit Notification 2017-01-04 15:19:21 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d66a9721913e89f1cc76068ee1a64b1cf0eef8d8&h=libreoffice-5-3

tdf#104744 RTF import: fix unexpected zero para left margin wrt style dedup

It will be available in 5.3.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.