tdf#104744 RTF import: fix unexpected zero para left margin wrt style dedup

See commit 1be0a3fa9ebb22b607c54b47739d4467acfed259 (n#825305:
writerfilter RTF import: override style properties like Word,
2014-06-17) for the details on style override in RTF.

Here the problem was that we added an unneeded "reset to 0" property, the
opposite situation that commit 657c6cc3acec0528209a8584b838cd6de581c437
(tdf#104228 RTF import: fix override of style left/right para margin,
2016-12-13) was fixing (there a "reset to 0" was missing).

(cherry picked from commit a9e029ace41562e28e9242d63230ad1ca275f5d3)

Change-Id: I37f079b9cb4773214d2531c2e34920b3b8927211